# modm-data

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: convert-html.yml  deploy-docs.yml  pypi.yml  test-kg.yml  test.yml  update-archives.yml
docs/: .gitignore  index.md.in  mkdocs.yml  pipeline_overview.md.in  source_overview.md.in
docs/pdoc/: syntax-highlighting.css  theme.css
docs/src/: CNAME
docs/src/pipeline/: header2svd.md  html2owl.md  html2svd.md  pdf2html.md
src/modm_data/: __init__.py
src/modm_data/cube2kg/: __main__.py
src/modm_data/cube2owl/: __main__.py
src/modm_data/cubehal/: __init__.py  dmamux_requests.py  header.py
src/modm_data/cubemx/: __init__.py  device_data.py  peripherals.py  stm32_data.py
src/modm_data/dl/: __init__.py  store.py
src/modm_data/dl/stmicro/: __init__.py  __main__.py  cubemx.py  cubeprog.py  document.py
src/modm_data/dl/stmicro/data/: cubemx.patch
src/modm_data/header2svd/: README.md  __init__.py  header.py
src/modm_data/header2svd/stmicro/: __init__.py  __main__.py  header.py  tree.py
src/modm_data/html/: __init__.py  chapter.py  document.py  list.py  parser.py  table.py  text.py
src/modm_data/html/stmicro/: __init__.py  datasheet.py  datasheet_sensor.py  datasheet_stm32.py  document.py  helper.py  reference.py
src/modm_data/html2owl/: README.md  __init__.py
src/modm_data/html2owl/stmicro/: __init__.py  __main__.py
src/modm_data/html2svd/: README.md  __init__.py
src/modm_data/html2svd/stmicro/: __init__.py  __main__.py  datasheet.py  reference.py
src/modm_data/kg/: __init__.py  identifier.py  store.py
src/modm_data/kg/stmicro/: __init__.py  identifier.py  model.py  schema.py
src/modm_data/owl/: __init__.py  identifier.py  store.py
src/modm_data/owl/stmicro/: __init__.py  device.py  model.py  ontology.py
src/modm_data/pdf/: __init__.py  character.py  document.py  graphics.py  image.py  link.py  page.py  path.py  render.py  structure.py
src/modm_data/pdf2html/: __init__.py  ast.py  cell.py  convert.py  figure.py  html.py  line.py  page.py  render.py  table.py
src/modm_data/pdf2html/stmicro/: __init__.py  __main__.py  ast.py  convert.py  document.py  page.py  table.py
src/modm_data/pdf2html/stmicro/data/: DS10689.patch  DS12983.patch  DS12993.patch  DS14217.patch  DS5318.patch  DS6329.patch  DS9716.patch  DS9826.patch  RM0008.patch  RM0033.patch  RM0038.patch  RM0041-v5.patch  RM0041-v6.patch  RM0041.patch  RM0090.patch  RM0313.patch  RM0316.patch  RM0351.patch  RM0385.patch  RM0386.patch  RM0399-v3.patch  RM0399-v4.patch  RM0410.patch  RM0430.patch  RM0431.patch  RM0432.patch  RM0434-v10.patch  RM0434-v11.patch  RM0434.patch  RM0468.patch  RM0471.patch  RM0473-v5.patch  RM0473.patch  RM0478-v3.patch  RM0478-v6.patch  RM0478.patch  RM0481.patch  RM0492.patch
src/modm_data/pdf2html/ti/: __init__.py  __main__.py  document.py  page.py
src/modm_data/svd/: __init__.py  model.py  read.py  write.py
src/modm_data/svd/stmicro/: __init__.py  device.py
src/modm_data/utils/: __init__.py  anytree.py  helper.py  math.py  path.py  xml.py
test/: convert_html.sh
test/data/html/: DS10329-v4.html  DS10693-v10.html  DS11250-v4.html  DS12117-v7.html  DS12930-v1.html  RM0313-v6.html  RM0399-v3.html  RM0456-v2.html  style.css
test/data/html/stmicro/: DS11250-v4.html  DS12556-v6.html  RM0090-v19.html  RM0360-v4.html  RM0367-v8.html  RM0434-v9.html  RM0453-v2.html  RM0456-v2.html
tools/: requirements.txt
tools/make/: arm.mk  common.mk  stmicro.mk
tools/marimo/: search.py
tools/scripts/: makefile_help.py  search_html.py  synchronize_docs.py
