[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "modm-data"
authors = [
    {name = "Niklas Hauser", email = "niklas@salkinium.com"},
]
description = "Embedded Hardware Description Processor"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["embedded", "hardware", "pdf", "parser"]
license = {text = "MPL-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "anytree==2.12.1",
    "CppHeaderParser>=2.7.4,<3",
    "jinja2>=3.1.3,<4",
    "lxml>=5.2.0,<6",
    "kuzu>=0.11.3,<0.12",
    "pypdfium2==4.30.0",
    "tqdm>=4.66.2,<5",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://data.modm.io"
"API Docs" = "https://data.modm.io/api"
"GitHub" = "https://github.com/modm-io/modm-data"
"Changelog" = "https://github.com/modm-io/modm-data/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
    "pdoc>=14,<15",
    "mkdocs>=1.5,<2",
    "mkdocs-material>=9.5,<10"
]
all = ["modm_data[docs]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modm_data = ["*.md", "*/*.md", "*/*/*.md", "*/*/*/*.md"]
"modm_data.dl.stmicro.data" = ["*"]
"modm_data.pdf2html.stmicro.data" = ["*"]

# [tool.setuptools]
# zip-safe = false

[tool.setuptools-git-versioning]
version_file = "VERSION"

[tool.ruff]
exclude = [".venv/", "ext/", "build/", "log/"]
line-length = 120
target-version = "py311"
